# PAAV

./: .gitignore  README  README.md
assignment_1/: CMakeLists.txt
assignment_1/include/: Box.hpp  Renderer.hpp
assignment_1/src/: Renderer.cpp  cluster_extraction.cpp  tree_utilities.cpp
assignment_2/: CMakeLists.txt
assignment_2/demo/: main.cpp
assignment_2/include/: CloudManager.h
assignment_2/include/tracker/: KalmanFilter.h  Tracker.h  Tracklet.h
assignment_2/include/viewer/: viewer_utils.hpp
assignment_2/src/: CloudManager.cpp
assignment_2/src/tracker/: KalmanFilter.cpp  Tracker.cpp  Tracklet.cpp
assignment_3/: README.md
assignment_3/devel/: .rosinstall  setup.sh
assignment_3/devel/lib/pkgconfig/: particle.pc
assignment_3/src/particle/: CMakeLists.txt
assignment_3/src/particle/include/: Box.hpp  Renderer.hpp
assignment_3/src/particle/include/particle/: map.h  particle_filter.h
assignment_3/src/particle/src/: Renderer.cpp  main.cpp  particle_filter.cpp
pcl/0_pcl_reader/: CMakeLists.txt  pcl_reader.cpp
pcl/1_voxel_filtering/: CMakeLists.txt  voxel_filtering.cpp
pcl/2_segmentation_plane/: CMakeLists.txt  segmentation.cpp
pcl/3_euclidean_clustering/: CMakeLists.txt  README  cluster_extraction.cpp
pcl/res/: 1639663212.029186000.pcd
perception/1_PCL_Exercises/pcl/0_pcl_reader/: CMakeLists.txt
perception/1_PCL_Exercises/pcl/1_voxel_filtering/: CMakeLists.txt  voxel_filtering.cpp
perception/1_PCL_Exercises/pcl/2_segmentation_plane/: CMakeLists.txt
perception/1_PCL_Exercises/pcl/3_euclidean_clustering/: cluster_extraction.cpp
perception/2_Kalman_Filter/: ex_kalman_1D.py  ex_kalman_2D.py  gaussian.py
perception/assignment_1/: CMakeCache.txt  CMakeLists.txt  README
perception/assignment_1/include/: Box.hpp  Renderer.hpp  tree_utilities.hpp
perception/assignment_1/src/: Renderer.cpp  cluster_extraction.cpp  euclidean_cluster.cpp  globals.cpp  main.cpp  process_cloud.cpp  proximity.cpp  tree_utilities.cpp
perception/assignment_2/: CMakeLists.txt  README.md
perception/assignment_2/demo/: main.cpp
perception/assignment_2/include/: CloudManager.h
perception/assignment_2/include/tracker/: KalmanFilter.h  Tracker.h  Tracklet.h
perception/assignment_2/include/viewer/: Renderer.h  viewer_utils.hpp
perception/assignment_2/src/: CloudManager.cpp  globals.cpp
perception/assignment_2/src/tracker/: KalmanFilter.cpp  Tracker.cpp  Tracklet.cpp
perception/assignment_2/src/viewer/: Renderer.cpp
perception/assignment_3/: README.md
perception/assignment_3/data/: res.txt
perception/assignment_3/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
perception/assignment_3/devel/lib/particle/: particle_node
perception/assignment_3/devel/lib/pkgconfig/: particle.pc
perception/assignment_3/devel/share/particle/cmake/: particleConfig.cmake
perception/assignment_3/src/particle/: CMakeLists.txt
perception/assignment_3/src/particle/include/: Box.hpp  Globals.hpp  Renderer.hpp
perception/assignment_3/src/particle/include/particle/: CircleFit.h  circle_fit.hpp  helper_cloud.h  helper_cloud.hpp  helper_functions.h  helper_functions.hpp  map.hpp  particle_filter.h  particle_filter.hpp
perception/assignment_3/src/particle/src/: Globals.cpp  Renderer.cpp  circle_fit.cpp  helper_cloud.cpp  helper_functions.cpp  main.cpp  particle_filter.cpp
